--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
 
+    <link rel="icon" type="image/png" href="Assets/favicon.png">
+
 </head>
 
 <body>
