--- a/index.html
+++ b/index.html
@@ -4,28 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Anwesha </title>
+    <title>Portfolio - Anwesha</title>
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
 
     <link rel="icon" type="image/png" href="Assets/favicon.png">
+
+
+
 
 </head>
 
 <body>
     <header>
         <div class="logo">
-<a href="#home"><img src="Assets/logo.png" alt="logo" width="150px"></a>
+            <a href="#home"><img src="Assets/logo.png" alt="logo" width="150px"></a>
         </div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#education">Education</a></li>
-
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#project">Projects</a></li>
-                <li><a href="#achievements">highlights</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#achievements">Highlights</a></li>
                 <li><a href="#blog">Blogs</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -43,37 +45,38 @@
                     target="_blank">Get Started</a>
             </div>
             <div class="graphic">
-                <img src="Assets/Cubic_1-1200x1200__1_-removebg-preview.png" width=1000px alt="Graphic">
+                <iframe src='https://my.spline.design/molang3dcopy-873f3b98acb4fd9a4f518a2a1809ed80/' frameborder='0' width='100%' height='100%'></iframe>
+                </div>
             </div>
         </section>
 
         <section id="about">
             <div class="my-story">
                 <h1>MY STORY</h1>
-
             </div>
 
             <div class="profile">
-
                 <div class="picture">
                     <img src="Assets/AG (1080 x 1350 px).png" alt="pic" width="600px">
                 </div>
 
                 <div class="bio">
-                    <h1>How I got Started ?</h1>
-                    <p>My journey into the world of technology began in my first year of college. Intrigued by the endless possibilities, I delved into frontend development, finding it a fascinating blend of creativity and logic. Balancing my academic studies with my passion projects, I created several web applications, each project fueling my enthusiasm and curiosity for tech even more.
-
-                    </p>
-                    <p> Parallel to my frontend development endeavors, I ventured into learning Java and C. These programming languages broadened my understanding of computer science fundamentals and enhanced my problem-solving skills.</p>
-                    <h3>Mail : ghoshanwesha272@gmail.com</h3>
+                    <h1>How I got Started?</h1>
+                    <p>My journey into the world of technology began in my first year of college. Intrigued by the
+                        endless possibilities, I delved into frontend development, finding it a fascinating blend of
+                        creativity and logic. Balancing my academic studies with my passion projects, I created several
+                        web applications, each project fueling my enthusiasm and curiosity for tech even more.</p>
+                    <p>Parallel to my frontend development endeavors, I ventured into learning Java and C. These
+                        programming languages broadened my understanding of computer science fundamentals and enhanced
+                        my problem-solving skills.</p>
+                    <h3>Mail: ghoshanwesha272@gmail.com</h3>
                 </div>
             </div>
         </section>
+
         <section id="education">
             <div class="edu-title">
-                <h1>"Education is the key to </h1>
-                <h1>unlocking the world"</h1>
-
+                <h1>"Education is the key to unlocking the world"</h1>
                 <p>Journey of Knowledge: Every Step to Success</p>
             </div>
 
@@ -84,9 +87,7 @@
                     </div>
                     <h3>St.Stephen's School,</h3>
                     <h3>Dum Dum cant.</h3>
-                    
-                    <p>I completed my education upto</p>
-                    <p>the 10th grade in the  ICSE curricullam.</p>
+                    <p>I completed my education up to the 10th grade in the ICSE curriculum.</p>
                 </div>
 
                 <div class="boxes">
@@ -94,10 +95,9 @@
                         <div class="image">
                             <img src="Assets/bodhicarya.jpg" alt="">
                         </div>
-                        <h3>Bodhicariya  School,</h3>
+                        <h3>Bodhicariya School,</h3>
                         <h3>Newtown, Kolkata</h3>
-                        <p>I completed my education upto</p>
-                        <p>the 12th grade in my CBSE curricullam.</p>
+                        <p>I completed my education up to the 12th grade in the CBSE curriculum.</p>
                     </div>
 
                     <div class="boxes">
@@ -107,13 +107,11 @@
                             </div>
                             <h3>UEM,</h3>
                             <h3>Kolkata campus</h3>
-                            <p>I haved pursued my B.Tech in Computer SCience Engineering 2022-2026 session.</p>
-                            
+                            <p>I am pursuing my B.Tech in Computer Science Engineering for the 2022-2026 session.</p>
                         </div>
-
-
                     </div>
-
+                </div>
+            </div>
         </section>
 
         <section id="skills">
@@ -136,32 +134,18 @@
                 <div class="carousel">
                     <div class="blog-card">
                         <img src="Assets/blog1.jpg" alt="Blog 1" style="width:100%">
-                        <h2>Sensational shiraz</h2>
+                        <h2>Sensational Shiraz</h2>
                         <p>This small but mighty valley produces over a fifth of Australia's wine, with shiraz the star
                             of the show.</p>
                     </div>
                     <div class="blog-card">
                         <img src="Assets/blog2.jpg" alt="Blog 2" style="width:100%">
-                        <h2>Celebrity dining</h2>
+                        <h2>Celebrity Dining</h2>
                         <p>Great wine deserves great food — visit the farm shop of famous Aussie chef Maggie Beer.</p>
                     </div>
                     <div class="blog-card">
                         <img src="Assets/blog3.jpg" alt="Blog 3" style="width:100%">
-                        <h2>The great outdoors</h2>
-                        <p>If you've had your fill of wine, clear your head in the forests, parks, and reservoirs in and
-                            around the valley.</p>
-                    </div>
-
-                    <div class="blog-card">
-                        <img src="Assets/blog3.jpg" alt="Blog 3" style="width:100%">
-                        <h2>The great outdoors</h2>
-                        <p>If you've had your fill of wine, clear your head in the forests, parks, and reservoirs in and
-                            around the valley.</p>
-                    </div>
-
-                    <div class="blog-card">
-                        <img src="Assets/blog3.jpg" alt="Blog 3" style="width:100%">
-                        <h2>The great outdoors</h2>
+                        <h2>The Great Outdoors</h2>
                         <p>If you've had your fill of wine, clear your head in the forests, parks, and reservoirs in and
                             around the valley.</p>
                     </div>
@@ -171,16 +155,12 @@
                 <button class="carousel-btn prev-btn">&#10094;</button>
                 <button class="carousel-btn next-btn">&#10095;</button>
             </div>
-
-            </div>
-
-            </div>
         </section>
 
         <section id="projects">
             <div class="edu-title">
-                <h1>Project</h1>
-                <p>My works</p>
+                <h1>Projects</h1>
+                <p>My Works</p>
             </div>
             <div class="projects-container">
                 <div class="row">
@@ -228,70 +208,40 @@
                         <h3>Project 6</h3>
                         <p>Description of project 6.</p>
                     </div>
-
-                    <div class="box-1">
-                        <div class="image">
-                            <img src="Assets/uemk.jpg" alt="">
-                        </div>
-                        <h3>Project 6</h3>
-                        <p>Description of project 6.</p>
-                    </div>
                 </div>
             </div>
         </section>
 
-        <section id="highlights">
-            <div class="highlight-title">
-                <h1>highlights</h1>
-                <h3>Honours and Rewards</h3>
+        <section id="contact">
+            <div class="contact-title">
+                <h1>Contact Me</h1>
+                <p>I'd love to hear from you!</p>
+            </div>
+            <div class="contact-form">
+                <form action="submit_form.php" method="POST">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
 
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="4" required></textarea>
+
+                    <input type="submit" value="Send Message">
+                </form>
             </div>
 
-            <div class="highlight-container">
-
-                <div class="highlight-img">
-                    <img src="" alt="">
-                </div>
-
-                <div class="bio-highlight">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ullam labore repellat voluptatum
-                        sequi quasi consequuntur facilis maxime repellendus esse saepe libero vel rerum, adipisci
-                        dolorum porro. Saepe, commodi nihil!</p>
-                </div>
-            </div>
-
-
-            <div class="highlight-img">
-                <img src="" alt="">
-            </div>
-
-            <div class="bio-highlight">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ullam labore repellat voluptatum sequi
-                    quasi consequuntur facilis maxime repellendus esse saepe libero vel rerum, adipisci dolorum porro.
-                    Saepe, commodi nihil!</p>
-            </div>
-            </div>
-
-
-            <div class="highlight-img">
-                <img src="" alt="">
-            </div>
-
-            <div class="bio-highlight">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ullam labore repellat voluptatum sequi
-                    quasi consequuntur facilis maxime repellendus esse saepe libero vel rerum, adipisci dolorum porro.
-                    Saepe, commodi nihil!</p>
-            </div>
-            </div>
         </section>
 
+        <footer>
 
+            <div class="footer-bottom">
+                <p>&copy; 2024 Anwesha Ghosh. All Rights Reserved.</p>
+            </div>
+        </footer>
 
     </main>
-
-
-
-
 </body>
 
 </html>
